@@ -1,0 +1,4 @@
+name: Template Name
+description: >
+   A description of the template
+create_dir: FALSE
